2007-06-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-font-lock.el (haskell-font-lock-symbols-alist): Add `forall'.

	* inf-haskell.el (inferior-haskell-error-regexp-alist): Be more careful
	with multiline patterns.  Add pattern for GHCi's type error messages.

2007-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-font-lock.el (haskell-font-lock-dot-is-not-composition):
	New function.
	(haskell-font-lock-symbols-alist): Change rule for the "." symbol to
	use that new function, so as to check it's not a "forall <foo> .".
	(haskell-font-lock-compose-symbol)
	(haskell-font-lock-symbols-keywords): Adjust to understand the new syntax.

2007-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-error-regexp-alist): Add entries for
	GHCI's exceptions.
	(inferior-haskell-mode): Set compilation-first-column.

2007-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-column+offset): New function.
	(haskell-indent-push-pos-offset, haskell-indent-after-keyword-column):
	Use it.
	(haskell-indent-within-literate-code): Accept `tex' as well as `latex'
	for literate style.

	* haskell-mode.el (haskell-literate): Use `tex' rather than `latex'.
	Declare as safe-local-variable.
	(literate-haskell-mode): Use `tex' rather than `latex'.
	Make it visible in the modeline.

	* haskell-font-lock.el (haskell-font-lock-keywords-create):
	Accept `tex' as well as `latex' for literate style.

	* haskell-decl-scan.el (haskell-decl-scan-version): Remove.

2007-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-use-cabal): New custom var.
	(inferior-haskell-cabal-of-buf): New fun.
	(inferior-haskell-load-file): Use it to try and do the right thing in
	multi-directory projects using a Cabal file.

	* haskell-cabal.el (inferior-haskell-string-prefix-p)
	(haskell-cabal-find-file): New functions.

	* inf-haskell.el (inferior-haskell-string-to-strings):